--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,19 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Author Name",
-            "email": "author@email.com",
-            "homepage": "http://author.com"
+            "name": "Rodrigo Serafin",
+            "email": "rdgo.serafim@gmail.com",
+            "homepage": "https://hermestecnologia.com"
         }
     ],
     "homepage": "https://github.com/hermes-tecnologia/logger",
     "keywords": ["Laravel", "Logger"],
     "require": {
-        "illuminate/support": "~9"
+        "illuminate/support": "^12.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "~7"
+        "phpunit/phpunit": "^12.0",
+        "orchestra/testbench": "^10"
     },
     "autoload": {
         "psr-4": {
@@ -27,6 +27,19 @@
         "psr-4": {
             "HermesTecnologia\\Logger\\Tests\\": "tests"
         }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "@php artisan package:discover --ansi"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "@php artisan vendor:publish --provider=\"HermesTecnologia\\Logger\\LoggerServiceProvider\" --tag=\"config\" --force"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan vendor:publish --provider=\"HermesTecnologia\\Logger\\LoggerServiceProvider\" --tag=\"config\" --force"
+        ]
     },
     "extra": {
         "laravel": {
