--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Rodrigo Serafin",
+            "name": "Rodrigo Serafim",
             "email": "rdgo.serafim@gmail.com",
             "homepage": "https://hermestecnologia.com"
         }
